# egh_rps

./: CMakeLists.txt  README.md
dat/: isonoke.txt
src/: CMakeLists.txt  egh_hmm.f90  egh_rps.f90  mod_hmm.f90  mod_rps.f90
